--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,11 @@
 	<version>1.2.17</version>
 </dependency>
   
-  
   <dependency>
-	<groupId>org.hsqldb</groupId>
+	<groupId>hsqldb</groupId>
 	<artifactId>hsqldb</artifactId>
-	<version>2.3.2</version>
+	<version>1.8.0.10</version>
 </dependency>
-  
   
   </dependencies>
   
