--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,25 @@
 </dependency>
   
   <dependency>
-	<groupId>hsqldb</groupId>
+	<groupId>org.hsqldb</groupId>
 	<artifactId>hsqldb</artifactId>
-	<version>1.8.0.10</version>
+	<version>2.3.2</version>
 </dependency>
+
+
+<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+	<groupId>org.postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+	<version>9.3-1102-jdbc41</version>
+</dependency>
+    
   
   </dependencies>
   
